MDEV-14884 Failed to enable encryption of temporary files in mariadb 10.3.3

enable the encryption (and abort on failure) after printing --help,
not before